# piston-audio-ui

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  run.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml
src/: __init__.py  audio_manager.py  bluetooth_agent.py  main.py  ui.py
tests/: __init__.py  conftest.py  test_audio_manager.py
